SET(SRCS main.cpp Initialization.cpp frontierCreation.cpp sortingNeighbouring.cpp invert.cpp getJacobianInverse.cpp normals.cpp matrixMaker.cpp meshLoader.cpp boundaryCondition.cpp correspondance.cpp fluxes.cpp numFluxIntegration.cpp solver.cpp stiffnessFluxProd.cpp valGp.cpp timeMarching.cpp computeCoeff.cpp readParam.cpp timeChecker.cpp compare.cpp numericalInitializer.cpp properties.cpp)
ADD_EXECUTABLE(main ${SRCS})
TARGET_LINK_LIBRARIES(main ${GMSH_LIBRARIES})

#FILE(GLOB SRCS *.cpp)
#FOREACH(SFILE ${SRCS})
#    GET_FILENAME_COMPONENT(PROG_NAME ${SFILE} NAME_WE)
#    ADD_EXECUTABLE(${PROG_NAME} ${SFILE})
#    TARGET_LINK_LIBRARIES(${PROG_NAME} ${GMSH_LIBRARIES})    
#ENDFOREACH()