

# programs
# SET(SRCS explore.cpp)
# ADD_EXECUTABLE(explore ${SRCS})
# TARGET_LINK_LIBRARIES(explore ${GMSH_LIBRARIES})

# compile each .cpp into an exe
#FILE(GLOB SRCS *.cpp)
#FOREACH(SFILE ${SRCS})
#    GET_FILENAME_COMPONENT(PROG_NAME ${SFILE} NAME_WE)
    #MESSAGE("processing ${SFILE} => ${PROG_NAME}")
#    ADD_EXECUTABLE(${PROG_NAME} ${SFILE})
#    TARGET_LINK_LIBRARIES(${PROG_NAME} ${GMSH_LIBRARIES})    
#ENDFOREACH()
